cmake_minimum_required(VERSION 3.7)
project(Codeforces)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        383/prob1.cpp
        383/prob2.cpp
        383/prob3.cpp
        383/prob4.cpp
        383/prob5.cpp
        405/1.cpp
        405/2.cpp
        405/3.cpp
        405/4.cpp
        405/5.cpp
        411/1.cpp
        411/2.cpp
        411/3.cpp
        411/4.cpp
        411/5.cpp
        414/q1.cpp
        414/q2.cpp
        414/q3.cpp
        414/q4.cpp
        414/q5.cpp
        415/q1.cpp
        415/q2.cpp
        415/q3.cpp
        415/q4.cpp
        415/q5.cpp
        415/q6.cpp
        415/q7.cpp
        415/template.cpp
        416/1.cpp
        416/2.cpp
        416/3.cpp
        416/4.cpp
        416/5.cpp
        416/6.cpp
        416/7.cpp
        416/template.cpp
        417/1.cpp
        417/2.cpp
        417/3.cpp
        417/4.cpp
        417/5.cpp
        417/6.cpp
        417/7.cpp
        417/template.cpp
        418/1.cpp
        418/2.cpp
        418/3.cpp
        418/4.cpp
        418/5.cpp
        418/6.cpp
        418/7.cpp
        418/template.cpp
        contest/1.cpp
        contest/2.cpp
        contest/3.cpp
        contest/4.cpp
        contest/5.cpp
        contest/6.cpp
        contest/7.cpp
        contest/template.cpp
        Edu19/q1.cpp
        Edu20/f.cpp
        Edu20/q1.cpp
        Edu20/q2.cpp
        Edu20/q3.cpp
        Edu20/q4.cpp
        Edu22/1.cpp
        Edu22/2.cpp
        Edu22/3.cpp
        Edu22/4.cpp
        Edu22/5.cpp
        Edu22/6.cpp
        Edu22/7.cpp
        Edu22/template.cpp
        Edu23/1.cpp
        Edu23/2.cpp
        Edu23/3.cpp
        Edu23/4.cpp
        Edu23/5.cpp
        Edu23/6.cpp
        Edu23/7.cpp
        Edu23/template.cpp
        virtual413/1.cpp
        virtual413/2.cpp
        virtual413/3.cpp
        virtual413/4.cpp
        virtual413/5.cpp
        virtual413/6.cpp
        virtual413/7.cpp
        virtual413/template.cpp
        118d.cpp
        145a.cpp
        159b.cpp
        251a.cpp
        264b.cpp
        276d.cpp
        357a.cpp
        401c.cpp
        414b.cpp
        466c.cpp
        474d.cpp
        478a.cpp
        479c.cpp
        483a.cpp
        489c.cpp
        492a.cpp
        492c.cpp
        493a.cpp
        494a.cpp
        587a.cpp
        596b.cpp
        604b.cpp
        620c.cpp
        624b.cpp
        681c.cpp
        707c.cpp
        804a.cpp
        BParade.cpp
        grasshopper.cpp
        prob2.cpp
        template.cpp
        urbanization.cpp)

add_executable(Codeforces ${SOURCE_FILES})